# cinema-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
config/: settings.py  urls.py
movies/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
movies/management/commands/: import_tmdb.py
movies/migrations/: 0001_initial.py  0001_initial_squashed_0007_remove_author_website.py  0002_movie_evaluation.py  0003_add_favorite_movies.py  0004_author_source_movie_source.py  0005_author_tmdb_id_movie_tmdb_id.py  0006_alter_author_source_alter_movie_release_date_and_more.py  0007_remove_author_website.py
movies/tests/: conftest.py  test_authors.py  test_movies.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py  test_registration.py
